[gd_scene load_steps=9 format=3 uid="uid://b6dt0n45ca8vi"]

[ext_resource type="Script" uid="uid://bnvier3b2bxkb" path="res://scripts/enemy/firebreath.gd" id="1_vphwq"]
[ext_resource type="Texture2D" uid="uid://bd1om1dlgdyft" path="res://assets/enemies/fireball.png" id="2_u18ms"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gdpki"]
resource_local_to_scene = true
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f8dqg"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fanjx"]
radius = 9.05539

[sub_resource type="Animation" id="Animation_q7xbm"]
resource_name = "breath"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fireball:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fireball2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fireball3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.99938),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"_animation_continue"
}, {
"args": [],
"method": &"_animation_continue"
}, {
"args": [],
"method": &"_animation_continue"
}, {
"args": [],
"method": &"_animation_continue"
}, {
"args": [],
"method": &"_animation_continue"
}, {
"args": [],
"method": &"_animation_continue"
}, {
"args": [],
"method": &"_animation_continue"
}, {
"args": [],
"method": &"stop_breath"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Fireball11:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Fireball12:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.27668, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3.14159, 4.71239, 0.0, 1.5708, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Fireball21:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708, 3.14159, 4.71239, 0.0, 1.5708]
}

[sub_resource type="Animation" id="Animation_bg8er"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fireball:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fireball2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fireball3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fireball11:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Fireball12:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tf2ka"]
_data = {
&"RESET": SubResource("Animation_bg8er"),
&"breath": SubResource("Animation_q7xbm")
}

[node name="Firebreath" type="Node2D"]
texture_filter = 1
script = ExtResource("1_vphwq")

[node name="Fireball" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(20, 0)
texture = ExtResource("2_u18ms")
hframes = 3

[node name="Fireball11" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(32, 0)
rotation = 1.5708
texture = ExtResource("2_u18ms")
hframes = 3

[node name="Fireball12" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(45, -1.13687e-13)
texture = ExtResource("2_u18ms")
hframes = 3

[node name="Fireball2" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(61, 0)
texture = ExtResource("2_u18ms")
hframes = 3
frame = 1

[node name="Fireball21" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(78, 1.42109e-14)
rotation = 3.14159
texture = ExtResource("2_u18ms")
hframes = 3
frame = 1

[node name="Fireball3" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(96, 0)
texture = ExtResource("2_u18ms")
hframes = 3
frame = 2

[node name="Area2D" type="Area2D" parent="."]
z_index = 100
collision_layer = 0
collision_mask = 26

[node name="FireBall1" type="CollisionShape2D" parent="Area2D"]
position = Vector2(20, 0)
shape = SubResource("CircleShape2D_gdpki")
debug_color = Color(1, 0, 0, 0.419608)

[node name="FireBall11" type="CollisionShape2D" parent="Area2D"]
position = Vector2(33, 0)
shape = SubResource("CircleShape2D_gdpki")
debug_color = Color(1, 0, 0, 0.419608)

[node name="FireBall12" type="CollisionShape2D" parent="Area2D"]
position = Vector2(45, 0)
shape = SubResource("CircleShape2D_gdpki")
debug_color = Color(1, 0, 0, 0.419608)

[node name="FireBall2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(62, 0)
shape = SubResource("CircleShape2D_f8dqg")
debug_color = Color(1, 0, 0, 0.419608)

[node name="FireBall21" type="CollisionShape2D" parent="Area2D"]
position = Vector2(78, 0)
shape = SubResource("CircleShape2D_f8dqg")
debug_color = Color(1, 0, 0, 0.419608)

[node name="FireBall3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(96, 0)
shape = SubResource("CircleShape2D_fanjx")
debug_color = Color(1, 0, 0, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tf2ka")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
